# Ladderbot

./: .gitignore  Procfile  config.example.yaml  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-03-11-ladderbot-chunk-1-foundation.md  2026-03-11-ladderbot-plan.md  chunk-2-data-layer.md
docs/superpowers/specs/: 2026-03-11-ladderbot-design.md
ladderbot/: config.py  run.py
ladderbot/alerts/: discord.py  formatter.py
ladderbot/data/: __init__.py  cache.py  injuries.py  nba_stats.py  nhl_stats.py  odds.py
ladderbot/db/: database.py  schema.sql
ladderbot/models/: calibration.py  features.py  nba_model.py  nhl_model.py  nhl_totals.py  value.py
ladderbot/parlay/: ladder.py  optimizer.py
ladderbot/tracking/: clv.py  results.py
ladderbot/utils/: odds.py
ladderbot/web/: app.py
ladderbot/web/routes/: dashboard.py  ladder.py  picks.py
ladderbot/web/static/: app.js  index.html  style.css
tests/: test_cache.py  test_calibration.py  test_clv.py  test_config.py  test_database.py  test_discord.py  test_features.py  test_formatter.py  test_injuries.py  test_ladder.py  test_nba_model.py  test_nba_stats.py  test_nhl_model.py  test_nhl_stats.py  test_nhl_totals.py  test_odds.py  test_odds_client.py  test_optimizer.py  test_results.py  test_run.py  test_value.py
